test/fail/error_cyclic/error_cyclic.sest
import ErrorCyclicFoo
import ErrorCyclicBar

module ErrorCyclic = struct
  val main() =
    {ErrorCyclicFoo.main(), ErrorCyclicBar.main()}
end
